lib/metter/parsers/dating.rb
# encoding: utf-8
# Autogenerated from a Treetop grammar. Edits may be lost.


require File.expand_path("../dating_nodes", __FILE__)
require File.expand_path("../dating_include", __FILE__)

module Dating
  include Treetop::Runtime

  def root
    @root ||= :expression
  end

  include Dating::Include

  module Expression0
    def delimiter
      elements[0]
    end

    def other
      elements[1]
    end
  end

  module Expression1
    def first
      elements[1]
    end

    def rest
      elements[2]
    end

    def ce
      elements[3]
    end

    def co
      elements[4]
    end

  end

  module Expression2
    def eval(env = {})
      dates     = [first.eval(env), *rest.elements.map { |element| element.other.eval(env) }]
      certainty = ce.empty? ? 100 : ce.eval(env)
      comment   = co.empty? ? nil : co.eval(env)

      Dating::ParseResult.new dates, certainty, comment
    end
  end

  def _nt_expression
    start_index = index
    if node_cache[:expression].has_key?(index)
      cached = node_cache[:expression][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      r2 = _nt_space
      if r2
        s1 << r2
      else
        break
      end
    end
    r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    s0 << r1
    if r1
      r3 = _nt_dating
      s0 << r3
      if r3
        s4, i4 = [], index
        loop do
          i5, s5 = index, []
          r6 = _nt_delimiter
          s5 << r6
          if r6
            r7 = _nt_dating
            s5 << r7
          end
          if s5.last
            r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            r5.extend(Expression0)
          else
            @index = i5
            r5 = nil
          end
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        s0 << r4
        if r4
          r9 = _nt_certainty
          if r9
            r8 = r9
          else
            r8 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r8
          if r8
            r11 = _nt_comment
            if r11
              r10 = r11
            else
              r10 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r10
            if r10
              s12, i12 = [], index
              loop do
                r13 = _nt_space
                if r13
                  s12 << r13
                else
                  break
                end
              end
              r12 = instantiate_node(SyntaxNode,input, i12...index, s12)
              s0 << r12
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Expression1)
      r0.extend(Expression2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:expression][start_index] = r0

    r0
  end

  module Certainty0
    def space
      elements[0]
    end

    def numeric
      elements[3]
    end

  end

  module Certainty1
    def eval(env = {})
      degree = numeric.eval(env)

      result =
        if degree < 1
          degree * 100
        elsif degree > 1
          degree
        else
          text_value =~ /%/ ? degree : degree * 100
        end

      result.to_i
    end
  end

  def _nt_certainty
    start_index = index
    if node_cache[:certainty].has_key?(index)
      cached = node_cache[:certainty][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_space
    s0 << r1
    if r1
      if has_terminal?('@', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('@')
        r2 = nil
      end
      s0 << r2
      if r2
        r4 = _nt_space
        if r4
          r3 = r4
        else
          r3 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r3
        if r3
          r5 = _nt_numeric
          s0 << r5
          if r5
            if has_terminal?('%', false, index)
              r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('%')
              r7 = nil
            end
            if r7
              r6 = r7
            else
              r6 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r6
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Certainty0)
      r0.extend(Certainty1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:certainty][start_index] = r0

    r0
  end

  module Comment0
    def space
      elements[0]
    end

    def c
      elements[2]
    end
  end

  module Comment1
    def eval(env = {})
      if c.text_value =~ /^\s*\]?\s*$/
        nil
      else
        c.text_value.strip.gsub(/\s*\]$/, '')
      end
    end
  end

  def _nt_comment
    start_index = index
    if node_cache[:comment].has_key?(index)
      cached = node_cache[:comment][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_space
    s0 << r1
    if r1
      i2 = index
      if has_terminal?('#', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('#')
        r3 = nil
      end
      if r3
        r2 = r3
      else
        if has_terminal?('[', false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('[')
          r4 = nil
        end
        if r4
          r2 = r4
        else
          @index = i2
          r2 = nil
        end
      end
      s0 << r2
      if r2
        s5, i5 = [], index
        loop do
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          if r6
            s5 << r6
          else
            break
          end
        end
        r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
        s0 << r5
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Comment0)
      r0.extend(Comment1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:comment][start_index] = r0

    r0
  end

  def _nt_dating
    start_index = index
    if node_cache[:dating].has_key?(index)
      cached = node_cache[:dating][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_beginning_of_month
    if r1
      r0 = r1
    else
      r2 = _nt_middle_of_month
      if r2
        r0 = r2
      else
        r3 = _nt_end_of_month
        if r3
          r0 = r3
        else
          r4 = _nt_beginning_of_year
          if r4
            r0 = r4
          else
            r5 = _nt_middle_of_year
            if r5
              r0 = r5
            else
              r6 = _nt_end_of_year
              if r6
                r0 = r6
              else
                r7 = _nt_day_month_year_to_day_month_year
                if r7
                  r0 = r7
                else
                  r8 = _nt_day_month_to_day_month_year
                  if r8
                    r0 = r8
                  else
                    r9 = _nt_day_month_year
                    if r9
                      r0 = r9
                    else
                      r10 = _nt_day_to_day_month_year
                      if r10
                        r0 = r10
                      else
                        r11 = _nt_month_year_to_month_year
                        if r11
                          r0 = r11
                        else
                          r12 = _nt_month_to_month_year
                          if r12
                            r0 = r12
                          else
                            r13 = _nt_month_year
                            if r13
                              r0 = r13
                            else
                              r14 = _nt_holiday_year
                              if r14
                                r0 = r14
                              else
                                r15 = _nt_year_only
                                if r15
                                  r0 = r15
                                else
                                  @index = i0
                                  r0 = nil
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:dating][start_index] = r0

    r0
  end

  module Delimiter0
    def space
      elements[2]
    end
  end

  module Delimiter1
    def space1
      elements[0]
    end

    def space2
      elements[2]
    end
  end

  def _nt_delimiter
    start_index = index
    if node_cache[:delimiter].has_key?(index)
      cached = node_cache[:delimiter][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r3 = _nt_space
    if r3
      r2 = r3
    else
      r2 = instantiate_node(SyntaxNode,input, index...index)
    end
    s1 << r2
    if r2
      if has_terminal?('\G[,;/]', true, index)
        r4 = true
        @index += 1
      else
        r4 = nil
      end
      s1 << r4
      if r4
        r5 = _nt_space
        s1 << r5
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Delimiter0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i6, s6 = index, []
      r7 = _nt_space
      s6 << r7
      if r7
        if has_terminal?('and', false, index)
          r8 = instantiate_node(SyntaxNode,input, index...(index + 3))
          @index += 3
        else
          terminal_parse_failure('and')
          r8 = nil
        end
        s6 << r8
        if r8
          r9 = _nt_space
          s6 << r9
        end
      end
      if s6.last
        r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
        r6.extend(Delimiter1)
      else
        @index = i6
        r6 = nil
      end
      if r6
        r0 = r6
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:delimiter][start_index] = r0

    r0
  end

  module DayMonthYear0
    def day
      elements[0]
    end

    def month
      elements[2]
    end

    def year
      elements[4]
    end
  end

  module DayMonthYear1
    def month
      elements[0]
    end

    def day
      elements[2]
    end

    def year
      elements[4]
    end
  end

  module DayMonthYear2
    def month
      elements[0]
    end

    def day
      elements[2]
    end

    def year
      elements[4]
    end
  end

  module DayMonthYear3
    def space
      elements[1]
    end
  end

  module DayMonthYear4
    def space
      elements[1]
    end
  end

  module DayMonthYear5
  end

  module DayMonthYear6
    def day_of_week_prefix
      elements[0]
    end

    def day
      elements[2]
    end

    def space
      elements[3]
    end

    def month
      elements[5]
    end

    def year
      elements[7]
    end
  end

  module DayMonthYear7
    def space
      elements[1]
    end
  end

  module DayMonthYear8
    def space
      elements[2]
    end
  end

  module DayMonthYear9
    def day_of_week_prefix
      elements[0]
    end

    def month
      elements[1]
    end

    def space
      elements[2]
    end

    def day
      elements[4]
    end

    def year
      elements[6]
    end
  end

  module DayMonthYear10
    def year
      elements[0]
    end

    def month
      elements[2]
    end

    def day
      elements[4]
    end
  end

  def _nt_day_month_year
    start_index = index
    if node_cache[:day_month_year].has_key?(index)
      cached = node_cache[:day_month_year][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_day_number
    s1 << r2
    if r2
      if has_terminal?('/', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('/')
        r3 = nil
      end
      s1 << r3
      if r3
        r4 = _nt_month_name
        s1 << r4
        if r4
          if has_terminal?('/', false, index)
            r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure('/')
            r5 = nil
          end
          s1 << r5
          if r5
            r6 = _nt_year
            s1 << r6
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(DayMonthYear,input, i1...index, s1)
      r1.extend(DayMonthYear0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i7, s7 = index, []
      r8 = _nt_month_number
      s7 << r8
      if r8
        if has_terminal?('/', false, index)
          r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('/')
          r9 = nil
        end
        s7 << r9
        if r9
          r10 = _nt_day_number
          s7 << r10
          if r10
            if has_terminal?('/', false, index)
              r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('/')
              r11 = nil
            end
            s7 << r11
            if r11
              r12 = _nt_year
              s7 << r12
            end
          end
        end
      end
      if s7.last
        r7 = instantiate_node(DayMonthYear,input, i7...index, s7)
        r7.extend(DayMonthYear1)
      else
        @index = i7
        r7 = nil
      end
      if r7
        r0 = r7
      else
        i13, s13 = index, []
        r14 = _nt_month_number
        s13 << r14
        if r14
          if has_terminal?('.', false, index)
            r15 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure('.')
            r15 = nil
          end
          s13 << r15
          if r15
            r16 = _nt_day_number
            s13 << r16
            if r16
              if has_terminal?('.', false, index)
                r17 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure('.')
                r17 = nil
              end
              s13 << r17
              if r17
                r18 = _nt_year
                s13 << r18
              end
            end
          end
        end
        if s13.last
          r13 = instantiate_node(DayMonthYear,input, i13...index, s13)
          r13.extend(DayMonthYear2)
        else
          @index = i13
          r13 = nil
        end
        if r13
          r0 = r13
        else
          i19, s19 = index, []
          r20 = _nt_day_of_week_prefix
          s19 << r20
          if r20
            i22, s22 = index, []
            if has_terminal?('the', false, index)
              r23 = instantiate_node(SyntaxNode,input, index...(index + 3))
              @index += 3
            else
              terminal_parse_failure('the')
              r23 = nil
            end
            s22 << r23
            if r23
              r24 = _nt_space
              s22 << r24
            end
            if s22.last
              r22 = instantiate_node(SyntaxNode,input, i22...index, s22)
              r22.extend(DayMonthYear3)
            else
              @index = i22
              r22 = nil
            end
            if r22
              r21 = r22
            else
              r21 = instantiate_node(SyntaxNode,input, index...index)
            end
            s19 << r21
            if r21
              r25 = _nt_day
              s19 << r25
              if r25
                r26 = _nt_space
                s19 << r26
                if r26
                  i28, s28 = index, []
                  if has_terminal?('of', false, index)
                    r29 = instantiate_node(SyntaxNode,input, index...(index + 2))
                    @index += 2
                  else
                    terminal_parse_failure('of')
                    r29 = nil
                  end
                  s28 << r29
                  if r29
                    r30 = _nt_space
                    s28 << r30
                  end
                  if s28.last
                    r28 = instantiate_node(SyntaxNode,input, i28...index, s28)
                    r28.extend(DayMonthYear4)
                  else
                    @index = i28
                    r28 = nil
                  end
                  if r28
                    r27 = r28
                  else
                    r27 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s19 << r27
                  if r27
                    r31 = _nt_month_name
                    s19 << r31
                    if r31
                      i32 = index
                      r33 = _nt_space
                      if r33
                        r32 = r33
                      else
                        i34, s34 = index, []
                        r36 = _nt_space
                        if r36
                          r35 = r36
                        else
                          r35 = instantiate_node(SyntaxNode,input, index...index)
                        end
                        s34 << r35
                        if r35
                          if has_terminal?(',', false, index)
                            r37 = instantiate_node(SyntaxNode,input, index...(index + 1))
                            @index += 1
                          else
                            terminal_parse_failure(',')
                            r37 = nil
                          end
                          s34 << r37
                          if r37
                            r39 = _nt_space
                            if r39
                              r38 = r39
                            else
                              r38 = instantiate_node(SyntaxNode,input, index...index)
                            end
                            s34 << r38
                          end
                        end
                        if s34.last
                          r34 = instantiate_node(SyntaxNode,input, i34...index, s34)
                          r34.extend(DayMonthYear5)
                        else
                          @index = i34
                          r34 = nil
                        end
                        if r34
                          r32 = r34
                        else
                          @index = i32
                          r32 = nil
                        end
                      end
                      s19 << r32
                      if r32
                        r40 = _nt_year
                        s19 << r40
                      end
                    end
                  end
                end
              end
            end
          end
          if s19.last
            r19 = instantiate_node(DayMonthYear,input, i19...index, s19)
            r19.extend(DayMonthYear6)
          else
            @index = i19
            r19 = nil
          end
          if r19
            r0 = r19
          else
            i41, s41 = index, []
            r42 = _nt_day_of_week_prefix
            s41 << r42
            if r42
              r43 = _nt_month_name
              s41 << r43
              if r43
                r44 = _nt_space
                s41 << r44
                if r44
                  i46, s46 = index, []
                  if has_terminal?('the', false, index)
                    r47 = instantiate_node(SyntaxNode,input, index...(index + 3))
                    @index += 3
                  else
                    terminal_parse_failure('the')
                    r47 = nil
                  end
                  s46 << r47
                  if r47
                    r48 = _nt_space
                    s46 << r48
                  end
                  if s46.last
                    r46 = instantiate_node(SyntaxNode,input, i46...index, s46)
                    r46.extend(DayMonthYear7)
                  else
                    @index = i46
                    r46 = nil
                  end
                  if r46
                    r45 = r46
                  else
                    r45 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s41 << r45
                  if r45
                    r49 = _nt_day
                    s41 << r49
                    if r49
                      i50 = index
                      r51 = _nt_space
                      if r51
                        r50 = r51
                      else
                        i52, s52 = index, []
                        r54 = _nt_space
                        if r54
                          r53 = r54
                        else
                          r53 = instantiate_node(SyntaxNode,input, index...index)
                        end
                        s52 << r53
                        if r53
                          if has_terminal?(',', false, index)
                            r55 = instantiate_node(SyntaxNode,input, index...(index + 1))
                            @index += 1
                          else
                            terminal_parse_failure(',')
                            r55 = nil
                          end
                          s52 << r55
                          if r55
                            r56 = _nt_space
                            s52 << r56
                          end
                        end
                        if s52.last
                          r52 = instantiate_node(SyntaxNode,input, i52...index, s52)
                          r52.extend(DayMonthYear8)
                        else
                          @index = i52
                          r52 = nil
                        end
                        if r52
                          r50 = r52
                        else
                          @index = i50
                          r50 = nil
                        end
                      end
                      s41 << r50
                      if r50
                        r57 = _nt_year
                        s41 << r57
                      end
                    end
                  end
                end
              end
            end
            if s41.last
              r41 = instantiate_node(DayMonthYear,input, i41...index, s41)
              r41.extend(DayMonthYear9)
            else
              @index = i41
              r41 = nil
            end
            if r41
              r0 = r41
            else
              i58, s58 = index, []
              r59 = _nt_year
              s58 << r59
              if r59
                if has_terminal?('-', false, index)
                  r60 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('-')
                  r60 = nil
                end
                s58 << r60
                if r60
                  r61 = _nt_month_number
                  s58 << r61
                  if r61
                    if has_terminal?('-', false, index)
                      r62 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('-')
                      r62 = nil
                    end
                    s58 << r62
                    if r62
                      r63 = _nt_day
                      s58 << r63
                    end
                  end
                end
              end
              if s58.last
                r58 = instantiate_node(DayMonthYear,input, i58...index, s58)
                r58.extend(DayMonthYear10)
              else
                @index = i58
                r58 = nil
              end
              if r58
                r0 = r58
              else
                @index = i0
                r0 = nil
              end
            end
          end
        end
      end
    end

    node_cache[:day_month_year][start_index] = r0

    r0
  end

  module MonthYear0
    def month
      elements[0]
    end

    def unknown
      elements[2]
    end

    def year
      elements[4]
    end
  end

  module MonthYear1
    def space
      elements[1]
    end
  end

  module MonthYear2
    def unknown
      elements[0]
    end

    def space1
      elements[1]
    end

    def month
      elements[3]
    end

    def space2
      elements[4]
    end

    def year
      elements[5]
    end
  end

  module MonthYear3
    def space
      elements[1]
    end
  end

  module MonthYear4
    def month
      elements[0]
    end

    def space
      elements[1]
    end

    def unknown
      elements[3]
    end

    def year
      elements[7]
    end
  end

  module MonthYear5
    def year
      elements[0]
    end

    def month
      elements[2]
    end

    def unknown
      elements[4]
    end
  end

  module MonthYear6
    def month
      elements[0]
    end

    def space
      elements[1]
    end

    def year
      elements[2]
    end
  end

  module MonthYear7
    def month
      elements[0]
    end

    def year
      elements[2]
    end
  end

  def _nt_month_year
    start_index = index
    if node_cache[:month_year].has_key?(index)
      cached = node_cache[:month_year][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
